--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 language: node_js
 node_js:
-  - 6
-notifications:
-  email:
-    on_success: never
-script: npm test
+- node
 cache:
+  yarn: true
   directories:
-    - node_modules
+  - node_modules
