--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lightning-maps-react",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "main": "dist/build.js",
   "scripts": {
     "build": "npm run clean && webpack",
@@ -12,8 +12,6 @@
     "bump": "npx standard-version"
   },
   "dependencies": {
-    "@emotion/styled": "^10.0.6",
-    "emotion": "^10.0.6",
     "lightning-maps": "0.0.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
@@ -26,25 +24,20 @@
     "@babel/preset-env": "^7.2.3",
     "@commitlint/cli": "^7.3.2",
     "@commitlint/config-conventional": "^7.3.1",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
+    "babel-eslint": "^8.0.3",
+    "babel-loader": "^8.0.0-beta.4",
     "babel-plugin-import": "^1.11.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^2.1.0",
     "eslint-config-standard-react": "^7.0.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^4.0.0-beta.4",
     "husky": "^1.3.1",
-    "node-sass": "^4.11.0",
     "rimraf": "^2.6.3",
-    "sass-loader": "^7.1.0",
     "standard": "^12.0.1",
     "standard-version": "^4.4.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack": "^4.12.2",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.11"
   },
   "browserslist": [
     ">0.2%",
@@ -63,5 +56,8 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "npm test"
     }
+  },
+  "resolutions": {
+    "terser": "3.14.1"
   }
 }
